--- a/index.html
+++ b/index.html
@@ -318,40 +318,40 @@
                 </div>
         </div>
     </footer>
-    <div class="backdrop is__hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
         <div class="modal">
-          <button type="button" class="model__btn" data-modal-close>
-            <svg class="btn__svg">
+          <button type="button" class="model-btn" data-modal-close>
+            <svg class="btn-svg">
               <use href="./img/symbol-defs.svg#cross"></use>
             </svg>
           </button>
-          <h4 class="modal__title">Залиште свої дані, ми вам передзвонимо</h4>
-          <form class="modal__form">
-            <div class="modal__box">
-              <label class="modal__lab">Ім'я
-                <input type="text" class="modal__inp" required />
-                <svg class="modal__svg">
+          <h4 class="modal-title">Залиште свої дані, ми вам передзвонимо</h4>
+          <form class="modal-form">
+            <div class="modal-box">
+              <label class="modal-lab">Ім'я
+                <input type="text" class="modal-inp" required />
+                <svg class="model-svg">
                     <use href="./img/symbol-defs.svg#person"></use>
                 </svg>
             </label>
             </div>
-            <div class="modal__box">
-              <label class="modal__lab">Телефон
-                <input type="tel" class="modal__inp" required />
-                <svg class="modal__svg">
+            <div class="modal-box">
+              <label class="modal-lab">Телефон
+                <input type="tel" class="modal-inp" required />
+                <svg class="model-svg">
                     <use href="./img/symbol-defs.svg#phone"></use>
                 </svg>
             </label>
             </div>
-            <div class="modal__box">
-              <label class="modal__lab">Пошта
-                <input type="email" class="modal__inp" required />
-                <svg class="modal__svg">
+            <div class="modal-box">
+              <label class="modal-lab">Пошта
+                <input type="email" class="modal-inp" required />
+                <svg class="model-svg">
                     <use href="./img/symbol-defs.svg#mail"></use>
                 </svg>
             </label>
             </div>
-            <label class="modal__lab">Коментар
+            <label class="modal-lab">Коментар
               <textarea
                 name="Коментар"
                 class="model-coment"
@@ -359,13 +359,13 @@
               ></textarea>
             </label>
             <label class="check">
-              <input type="checkbox" class="modal__chek" required />
-              <p class="check__text">Погоджуюся з розсилкою та приймаю
-                <a href="#" class="check__link">Умови договору</a>
+              <input type="checkbox" class="modal-chek" required />
+              <p class="check-text">Погоджуюся з розсилкою та приймаю
+                <a href="#" class="check-link">Умови договору</a>
               </p>
             </label>
-            <div class="modal__btn">
-                <button type="submit" class="check__btn">Відправити</button>
+            <div class="modal-btn">
+                <button type="submit" class="check-btn">Відправити</button>
             </div>
           </form>
         </div>
