--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -32,104 +32,104 @@
     </header>
 
     <main>
-        <section class="portfolio-section">
+        <section class="portfolio__section">
             <div class="container">
-            <ul class="buttons-list">
+            <ul class="buttons__list">
                 <li><button type="button" class="btn">Усі</button></li>
                 <li><button type="button" class="btn">Вебсайти</button></li>
                 <li><button type="button" class="btn">Додатки</button></li>
                 <li><button type="button" class="btn">Дизайн</button></li>
                 <li><button type="button" class="btn">Маркетинг</button></li>
             </ul>
-            <ul class="portfolio-list">
-                <li class="services-item">
-                <div class="services-im">
-                    <img class="services-img" src="../img/tekhnokryak.jpg" alt="Tekhnokryak">
-                    <p class="services-paragraph">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+            <ul class="portfolio__list">
+                <li class="services__item">
+                <div class="services__im">
+                    <img class="services__img" src="../img/tekhnokryak.jpg" alt="Tekhnokryak">
+                    <p class="services__paragraph">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
-                    <div class="services-box">
-                    <h2 class="services-caption">Технокряк</h2>
-                    <p class="services-text">Веб-сайт</p>
-                </div>
-                </li>
-                <li class="services-item">
-                    <div class="services-im">
-                        <img class="services-img" src="../img/new-orlean-vs-golden-star.jpg" alt="New Orlean vs Golden Star">
-                        <p class="services-paragraph">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
-                    </div>
-                    <div class="services-box">
-                    <h2 class="services-caption">Постер New Orlean vs Golden Star</h2>
-                    <p class="services-text">Дизайн</p>
+                    <div class="services__box">
+                    <h2 class="services__caption">Технокряк</h2>
+                    <p class="services__text">Веб-сайт</p>
                 </div>
                 </li>
-                <li class="services-item">
-                    <div class="services-im">
-                        <img class="services-img" src="../img/seafood.jpg" alt="Seafood">
-                        <p class="services-paragraph">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                <li class="services__item">
+                    <div class="services__im">
+                        <img class="services__img" src="../img/new-orlean-vs-golden-star.jpg" alt="New Orlean vs Golden Star">
+                        <p class="services__paragraph">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                     </div>
-                    <div class="services-box">
-                    <h2 class="services-caption">Ресторан Seafood</h2>
-                    <p class="services-text">Додаток</p>
+                    <div class="services__box">
+                    <h2 class="services__caption">Постер New Orlean vs Golden Star</h2>
+                    <p class="services__text">Дизайн</p>
+                </div>
+                </li>
+                <li class="services__item">
+                    <div class="services__im">
+                        <img class="services__img" src="../img/seafood.jpg" alt="Seafood">
+                        <p class="services__paragraph">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                    </div>
+                    <div class="services__box">
+                    <h2 class="services__caption">Ресторан Seafood</h2>
+                    <p class="services__text">Додаток</p>
                     </div>
                 </li>
-                <li class="services-item">
-                    <div class="services-im">
-                        <img class="services-img" src="../img/prime.jpg" alt="Prime">
-                        <p class="services-paragraph">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                <li class="services__item">
+                    <div class="services__im">
+                        <img class="services__img" src="../img/prime.jpg" alt="Prime">
+                        <p class="services__paragraph">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                     </div>
-                    <div class="services-box">
-                    <h2 class="services-caption">Проєкт Prime</h2>
-                    <p class="services-text">Маркетинг</p>
-                    </div>
-                </li>
-                <li class="services-item">
-                    <div class="services-im">
-                        <img class="services-img" src="../img/boxes.jpg" alt="Boxes">
-                        <p class="services-paragraph">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
-                    </div>
-                    <div class="services-box">
-                    <h2 class="services-caption">Проєкт Boxes</h2>
-                    <p class="services-text">Додаток</p>
+                    <div class="services__box">
+                    <h2 class="services__caption">Проєкт Prime</h2>
+                    <p class="services__text">Маркетинг</p>
                     </div>
                 </li>
-                <li class="services-item">
-                    <div class="services-im">
-                        <img class="services-img" src="../img/inspiration-has-no-borders.jpg" alt="Borders">
-                        <p class="services-paragraph">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                <li class="services__item">
+                    <div class="services__im">
+                        <img class="services__img" src="../img/boxes.jpg" alt="Boxes">
+                        <p class="services__paragraph">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                     </div>
-                    <div class="services-box">
-                    <h2 class="services-caption">Inspiration has no Borders</h2>
-                    <p class="services-text">Веб-сайт</p>
-                    </div>
-                </li>
-                <li class="services-item">
-                    <div class="services-im">
-                        <img class="services-img" src="../img/limited-edition.jpg" alt="edition">
-                        <p class="services-paragraph">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
-                    </div>
-                    <div class="services-box">
-                    <h2 class="services-caption">Видання Limited Edition</h2>
-                    <p class="services-text">Дизайн</p>
+                    <div class="services__box">
+                    <h2 class="services__caption">Проєкт Boxes</h2>
+                    <p class="services__text">Додаток</p>
                     </div>
                 </li>
-                <li class="services-item">
-                    <div class="services-im">
-                        <img class="services-img" src="../img/lab.jpg" alt="LAB">
-                        <p class="services-paragraph">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                <li class="services__item">
+                    <div class="services__im">
+                        <img class="services__img" src="../img/inspiration-has-no-borders.jpg" alt="Borders">
+                        <p class="services__paragraph">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                     </div>
-                    <div class="services-box">
-                    <h2 class="services-caption">Проєкт LAB</h2>
-                    <p class="services-text">Маркетинг</p>
+                    <div class="services__box">
+                    <h2 class="services__caption">Inspiration has no Borders</h2>
+                    <p class="services__text">Веб-сайт</p>
                     </div>
                 </li>
-                <li class="services-item">
-                    <div class="services-im">
-                        <img class="services-img" src="../img/growing-business.jpg" alt="Business">
-                        <p class="services-paragraph">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                <li class="services__item">
+                    <div class="services__im">
+                        <img class="services__img" src="../img/limited-edition.jpg" alt="edition">
+                        <p class="services__paragraph">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                     </div>
-                    <div class="services-box">
-                    <h2 class="services-caption">Growing Business</h2>
-                    <p class="services-text">Додаток</p>
+                    <div class="services__box">
+                    <h2 class="services__caption">Видання Limited Edition</h2>
+                    <p class="services__text">Дизайн</p>
+                    </div>
+                </li>
+                <li class="services__item">
+                    <div class="services__im">
+                        <img class="services__img" src="../img/lab.jpg" alt="LAB">
+                        <p class="services__paragraph">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                    </div>
+                    <div class="services__box">
+                    <h2 class="services__caption">Проєкт LAB</h2>
+                    <p class="services__text">Маркетинг</p>
+                    </div>
+                </li>
+                <li class="services__item">
+                    <div class="services__im">
+                        <img class="services__img" src="../img/growing-business.jpg" alt="Business">
+                        <p class="services__paragraph">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                    </div>
+                    <div class="services__box">
+                    <h2 class="services__caption">Growing Business</h2>
+                    <p class="services__text">Додаток</p>
                     </div>
                 </li>
             </ul>
