--- a/index.html
+++ b/index.html
@@ -201,50 +201,50 @@
             <section class="clients">
                 <div class="container">
                     <h2 class="clients__title" data-aos="fade-up-left">Постійні клієнти</h2>
-                    <ul class="client__list">
-                        <li class="client__item" data-aos="flip-up">
-                            <a href="#" class="client__link">
-                                <svg class="client__icon">
+                    <ul class="clients__list">
+                        <li class="clients__item" data-aos="flip-up">
+                            <a href="#" class="clients__link">
+                                <svg class="clients__icon">
                                     <use href="./img/symbol-defs.svg#ya-co"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="client__item" data-aos="flip-down">
-                            <a href="#" class="client__link">
-                                <svg class="client__icon">
+                        <li class="clients__item" data-aos="flip-down">
+                            <a href="#" class="clients__link">
+                                <svg class="clients__icon">
                                     <use href="./img/symbol-defs.svg#company"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="client__item" data-aos="fade-up"
+                        <li class="clients__item" data-aos="fade-up"
                         data-aos-duration="3000">
-                            <a href="#" class="client__link">
-                                <svg class="client__icon">
+                            <a href="#" class="clients__link">
+                                <svg class="clients__icon">
                                     <use href="./img/symbol-defs.svg#company-apple"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="client__item" data-aos="fade-left"
+                        <li class="clients__item" data-aos="fade-left"
                         data-aos-anchor="#example-anchor"
                         data-aos-offset="500"
                         data-aos-duration="500">
-                            <a href="#" class="client__link">
-                                <svg class="client__icon">
+                            <a href="#" class="clients__link">
+                                <svg class="clients__icon">
                                     <use href="./img/symbol-defs.svg#foster"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="client__item" data-aos="fade-up"
+                        <li class="clients__item" data-aos="fade-up"
                         data-aos-anchor-placement="center-bottom">
-                            <a href="#" class="client__link">
-                                <svg class="client__icon">
+                            <a href="#" class="clients__link">
+                                <svg class="clients__icon">
                                     <use href="./img/symbol-defs.svg#brand"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="client__item" data-aos="flip-left">
-                            <a href="#" class="client__link">
-                                <svg class="client__icon">
+                        <li class="clients__item" data-aos="flip-left">
+                            <a href="#" class="clients__link">
+                                <svg class="clients__icon">
                                     <use href="./img/symbol-defs.svg#tag-line"></use>
                                 </svg>
                             </a>
@@ -354,7 +354,7 @@
             <label class="modal__lab">Коментар
               <textarea
                 name="Коментар"
-                class="model__coment"
+                class="modal__coment"
                 placeholder="Введіть текст"
               ></textarea>
             </label>
