--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="container">
             <nav class="header__nav">
                 <a class="header__logo" href="./index.html">Web<span class="header__span">Studio</span></a>
-                <ul class="nav__list">
+                <ul class="nav">
                     <li class="nav__item"><a class="nav__link current" href="./index.html">Студія</a></li>
                     <li class="nav__item"><a class="nav__link" href="./pages/portfolio.html">Портфоліо</a></li>
                     <li class="nav__item"><a class="nav__link" href="#">Контакти</a></li>
