--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
             </div>
         </section>
         <!-- секція функций -->
-        <section class="features">
+        <!-- <section class="features">
             <div class="container">
                 <ul class="features__list" data-aos="fade-down-right">
                     <li class="features__item">
-                        <!-- <svg class="svg">
+                         <svg class="svg">
                             <use href="./img/symbol-defs.svg#icon-antenna"></use>
-                        </svg> -->
+                        </svg>
                         <h3 class="features__title">УВАГА ДО ДЕТАЛЕЙ</h3>
                         <p class="features__text">Ідейні міркування, і навіть початок повсякденної роботи з
                             формування
@@ -73,9 +73,9 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </section> -->
             <!-- секція робота -->
-            <section class="work">
+            <!-- <section class="work">
                 <div class="container">
                     <h3 class="work__title" data-aos="zoom-in">Чим ми займаємося</h3>
                     <ul class="work__list">
@@ -105,9 +105,9 @@
                         </li>
                     </ul>
                 </div>
-            </section>
+            </section> -->
             <!-- секція команда -->
-            <section class="team">
+            <!-- <section class="team">
                 <div class="container">
                     <h2 class="team__title" data-aos="flip-left">Наша команда</h2>
                     <ul class="team__list">
@@ -197,8 +197,8 @@
                         </li>
                     </ul>
                 </div>
-            </section>
-            <section class="clients">
+            </section> -->
+            <!-- <section class="clients">
                 <div class="container">
                     <h2 class="clients__title" data-aos="fade-up-left">Постійні клієнти</h2>
                     <ul class="clients__list">
@@ -251,9 +251,9 @@
                         </li>
                     </ul>
                 </div>
-            </section>
+            </section> -->
     </main>
-    <footer class="footer">
+    <!-- <footer class="footer">
         <div class="container footer__box">
             <div class="footer__div">
                 <a class="footer__logo" href="./index.html">Web<span class="logo__footer">Studio</span></a>
@@ -317,8 +317,8 @@
                     </form>
                 </div>
         </div>
-    </footer>
-    <div class="backdrop is-hidden" data-modal>
+    </footer> -->
+    <!-- <div class="backdrop is-hidden" data-modal>
         <div class="modal">
           <button type="button" class="model__btn" data-modal-close>
             <svg class="btn__svg">
@@ -369,7 +369,7 @@
             </div>
           </form>
         </div>
-      </div>
+      </div> -->
       <script src="./js/modal.js"></script>
       <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
       <script>
