--- a/index.html
+++ b/index.html
@@ -43,17 +43,12 @@
             </div>
         </section>
         <!-- секція функций -->
-        <!-- <section class="features">
+        <section class="features">
             <div class="container">
                 <ul class="features__list" data-aos="fade-down-right">
                     <li class="features__item">
-                         <svg class="svg">
-                            <use href="./img/symbol-defs.svg#icon-antenna"></use>
-                        </svg>
                         <h3 class="features__title">УВАГА ДО ДЕТАЛЕЙ</h3>
-                        <p class="features__text">Ідейні міркування, і навіть початок повсякденної роботи з
-                            формування
-                            позиції.</p>
+                        <p class="features__text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                     </li>
                     <li class="features__item">
                         <h3 class="features__title">ПУНКТУАЛЬНІСТЬ</h3>
@@ -73,7 +68,7 @@
                     </li>
                 </ul>
             </div>
-        </section> -->
+        </section>
             <!-- секція робота -->
             <!-- <section class="work">
                 <div class="container">
