--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </div>
         </section>
             <!-- секція робота -->
-            <!-- <section class="work">
+            <section class="work">
                 <div class="container">
                     <h3 class="work__title" data-aos="zoom-in">Чим ми займаємося</h3>
                     <ul class="work__list">
@@ -100,9 +100,9 @@
                         </li>
                     </ul>
                 </div>
-            </section> -->
+            </section>
             <!-- секція команда -->
-            <!-- <section class="team">
+            <section class="team">
                 <div class="container">
                     <h2 class="team__title" data-aos="flip-left">Наша команда</h2>
                     <ul class="team__list">
@@ -192,8 +192,8 @@
                         </li>
                     </ul>
                 </div>
-            </section> -->
-            <!-- <section class="clients">
+            </section>
+            <section class="clients">
                 <div class="container">
                     <h2 class="clients__title" data-aos="fade-up-left">Постійні клієнти</h2>
                     <ul class="clients__list">
@@ -246,7 +246,7 @@
                         </li>
                     </ul>
                 </div>
-            </section> -->
+            </section>
     </main>
     <!-- <footer class="footer">
         <div class="container footer__box">
