--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                 </div>
             </section>
     </main>
-    <!-- <footer class="footer">
+    <footer class="footer">
         <div class="container footer__box">
             <div class="footer__div">
                 <a class="footer__logo" href="./index.html">Web<span class="logo__footer">Studio</span></a>
@@ -265,7 +265,7 @@
                     </ul>
                 </address>
             </div>
-            <div>
+            <div class="footer__news">
                 <h2 class="footer__title">ПРИЄДНУЙТЕСЬ</h2>
                     <ul class="footer__list">
                         <li class="footer__item">
@@ -312,7 +312,7 @@
                     </form>
                 </div>
         </div>
-    </footer> -->
+    </footer>
     <!-- <div class="backdrop is-hidden" data-modal>
         <div class="modal">
           <button type="button" class="model__btn" data-modal-close>
