--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -137,7 +137,7 @@
         </section>
     </main>
 
-    <footer class="footer">
+    <!-- <footer class="footer">
         <div class="container footer__box">
             <div>
                 <a class="footer__logo" href="../index.html">Web<span class="logo__footer">Studio</span></a>
@@ -201,7 +201,7 @@
                     </form>
                 </div>
         </div>
-    </footer>
+    </footer> -->
 
 </body>
 
