--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                 </div>
         </div>
     </footer>
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
         <div class="modal">
           <button type="button" class="model__btn" data-modal-close>
             <svg class="btn__svg">
@@ -389,7 +389,7 @@
             </div>
           </form>
         </div>
-      </div> -->
+      </div>
       <script src="./js/modal.js"></script>
       <script src="./js/modal-header.js"></script>
       <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
